Fixing horizontal scroll bug

--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -32,12 +32,11 @@ body {
     background-color: #e01b07;
     position: absolute;
     top: 0;
-    left: 40px;
     width: 100%;
     height: 100%;
     overflow: hidden;
     z-index: -100;
-    clip-path: polygon(0 0, 90% 0%, 70% 100%, 0 100%);
+    clip-path: polygon(0 0, 94% 0%, 74% 102%, 0 100%);
 }
 
 .jumbotron:after {
